# babelo

./: .gitignore  README.md  pyproject.toml
cli/: cli.py
cli/interactive/: __init__.py  completers.py  session.py
core/: database.py  languages.py  model.py
frontend/: index.html
frontend/src/: App.tsx  TranslateApp.tsx  index.css
frontend/src/components/: HistoryItem.tsx  HistorySidebar.tsx  ModelSelector.tsx  OnboardingScreen.tsx  SavedSidebar.tsx  SavedTranslationItem.tsx  SourcePanel.tsx  TargetPanel.tsx  TranslationPanel.tsx  VoiceSplitButton.tsx  icons.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  combobox.tsx  listbox.tsx  textarea.tsx
frontend/src/utils/: constants.ts  languageStorage.ts
server/: main.py
server/routes/: languages.py  model.py  preferences.py  saved.py  translate.py
src/bab/: __init__.py  cli.py  interactive.py  main.py  model.py
src/cli/: cli.py  interactive.py
src/cli/interactive/: completers.py  session.py
src/core/: database.py  preferences.py
src/frontend/: pnpm-lock.yaml
src/frontend/src/: App.tsx  TranslateApp.tsx
src/frontend/src/components/: HistoryItem.tsx  HistorySidebar.tsx  LoadingScreen.tsx  OnboardingScreen.tsx  TranslationPanel.tsx  VoiceSelector.tsx  VoiceSplitButton.tsx  icons.tsx
src/frontend/src/utils/: constants.ts  languageStorage.ts
src/server/: main.py
src/server/routes/: history.py  preferences.py
src/web-frontend/: SETUP.md  package.json
src/web-frontend/src/: App.tsx
src/web-frontend/src/components/: LanguageSelector.tsx
tests/: test_main.py  test_model.py
(+8 files in other folders)
