[project]
name = "bab"
version = "0.1.0"
description = "Bab API - A FastAPI backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "transformers",
    "torch",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "huggingface-hub",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
bab = "cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "server"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
